# DeansLunchEvent_MiniArms

./: .gitignore  AGENTS.md  CLAUDE.md  setup.md
.claude/: improvements.md  kanban.md  settings.json
.claude/memory/: architecture.md  decisions.md
.claude/rules/: coding.md  maintain.md
.superpowers/brainstorm/45380-1779685498/content/: screen-mockup-v2.html  screen-mockup.html  ui-direction.html
.superpowers/brainstorm/45380-1779685498/state/: server-info
David Final Version/ArmReceiver/: ArmReceiver.ino
David Final Version/Controller/: CMakeLists.txt  Controller.ino  filelist.txt  power_manager.h  ui.c  ui.h  ui_Screen1.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_joint2.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1842574513.c  ui_img_2043791660.c  ui_img_closesmall3_png.c  ui_img_closesmall_png.c  ui_img_image_png.c  ui_img_malogo_png.c  ui_img_smile_png.c
David Final Version/MasterESPHotspot/: MasterESPHotspot.ino
MASTERCONTROLLER/master/: CMakeLists.txt  filelist.txt  master.ino  ui.h  ui_Screen1.c  ui_Screen1.h  ui_comp_joint2.c  ui_events.c  ui_events.h  ui_img_195482244.c
final/: esp_panel_board_custom_conf.h  final.ino  power_manager.cpp  power_manager.h  ui_Screen1.c  ui_Screen1.h  ui_comp.c  ui_comp.h  ui_events.h  ui_helpers.c  ui_img_opensmall3_png.c  ui_img_opensmall_png.c  ui_img_swap_png.c  ui_img_switch_png.c
master/espnow_two_buttons/: espnow_two_buttons.ino
receiving_test/: receiving_test.ino
tests/: Makefile  test_gripper  test_gripper.c  test_messages  test_messages.c
tests/stubs/: Arduino.h  WiFi.h  esp_now.h
