SET(SOURCES ui_comp_joint2.c
    ui_comp.c
    ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    ui_img_2043791660.c
    ui_img_195482244.c
    ui_img_swap_png.c
    ui_img_1842574513.c
    ui_img_closesmall3_png.c
    ui_img_opensmall3_png.c
    ui_img_malogo_png.c)

add_library(ui ${SOURCES})
